* Fix regression in compileSelector() and make Patterns.attribute use a non-greedy `.*?`. [jddalton]

* Ensure `:enabled` and `:disabled` dynamic pseudos only match elements with a `type` property to avoid false positives on LABEL elements. [jddalton]

* Rename `base` to `doc`, `doc` variable is updated for each selection so the in-line tests all references the ownerDocument of the scrutinized elements. [Diego Perini, kangax]

* Refine regexp used in stripTags(), Patterns.attribute, Patterns.dpseudos, `reSiblings`, `reSplitGroup`, `reLastToken`, `reUnnormalized`, `reUseSafeNormalize`, `reValidator`, `RE_BUGGY_MUTATION`, and `RE_SIMPLE_SELECTOR`. [jddalton]

* Rename `strEncoding` to `strIdentifier`, `strSkipGroup` to strSkipGroups, `reClassValue` to `reIdentifier`, and `reSplitToken` to `reLastToken`. [jddalton]

* Modify the compiler to reduce the number of times it checks nodeName/nodeType values. [jddalton]

* Revert to using `in` operator when resolving `:enabled` and `:disabled` dynamic pseudo classes on control elements. [Diego Perini]

* Fix regression in `reSplitGroup` and allow escaped characters in `reSplitGroup`, `reSplitToken`, Patterns.attribute, and Patterns.dpseudos. [jddalton, pdanpdan]

* Rename prop `CSS_ID` to `UID` and use native element.unqiueID if available. [jddalton]

* Rewrite structural pseudo class resolver in the compiler to better match QSA behavior and results. [Diego Perini]

* Ensure element.type exists before calling toLowerCase() on it for `:enabled` and `:disabled` pseudos. [jddalton]

* Rename `NATIVE_QSAPI` to `NATIVE_QSA` and test for querySelectorAll() instead of querySelector(). [jddalton]

* Avoid resetting current element in the first iteration of compileGroup() and rename `native_api` to `select_simple`. [Diego Perini, jddalton]

* Remove duplicate `context` variable and use `base` instead. [Diego Perini]

* Add `NATIVE_HAS_FOCUS` variable. [Diego Perini]
