@@ -1,3 +1,5 @@
+* Fix `RE_BUGGY_QSAPI` class attribute feature test and correct Dojo unit tests. [jddalton]
+
 * Fix regression in compileSelector() and make Patterns.attribute use a non-greedy `.*?`. [jddalton]
 
 * Ensure `:enabled` and `:disabled` dynamic pseudos only match elements with a `type` property to avoid false positives on LABEL elements. [jddalton]
